Update House Price Prediction.ipynb

--- a/House Price Prediction.ipynb
+++ b/House Price Prediction.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "270b7ef3",
+   "id": "9685a351",
    "metadata": {},
    "source": [
     "<span style=\"font-family:cursive; font-size:36px;box-shadow: black  0px 3px 15px; padding:8px 16px; border-radius:10px; border: 2px solid black; font-weight:bold; text-shadow: 2px 2px 5px rgba(4, 2, 0, 0.5); color:;\"> 2 | <span style=\"color:black ; font-style: italic;\">Read Dataset</span> "
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a077e6c",
+   "id": "47e12ee0",
    "metadata": {},
    "source": [
     "<span style=\"font-family:cursive; font-size:36px;box-shadow: black  0px 3px 15px; padding:8px 16px; border-radius:10px; border: 2px solid black; font-weight:bold; text-shadow: 2px 2px 5px rgba(4, 2, 0, 0.5); color:;\"> 3 | <span style=\"color:black ; font-style: italic;\">Dataset Overview</span> "
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "id": "000f936f",
    "metadata": {},
    "outputs": [
@@ -1008,32 +1008,18 @@
       " 78  SaleCondition  1460 non-null   object \n",
       " 79  SalePrice      1460 non-null   int64  \n",
       "dtypes: float64(3), int64(34), object(43)\n",
-      "memory usage: 912.6+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "cd9fec38",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "memory usage: 912.6+ KB\n",
+      "\n",
+      "Number of columns of Data Type float64 3\n",
       "Number of columns of Data Type int64 34\n",
-      "Number of columns of Data Type O 43\n",
-      "Number of columns of Data Type float64 3\n"
+      "Number of columns of Data Type O 43\n"
      ]
     }
    ],
    "source": [
-    "for i in ['int64','O', 'float64']:\n",
+    "df.info()\n",
+    "print()\n",
+    "for i in ['float64','int64','O']:\n",
     "    df_num = df.select_dtypes(include = i)\n",
     "    print(f'Number of columns of Data Type {i}',len(df_num.columns))"
    ]
@@ -1106,8 +1092,8 @@
     "* Number of Entries: The dataset consists of `1460 entries`, ranging from `index 0 to 1459`.\n",
     "* Columns: There are `80` columns in the dataset corresponding to various attributes of the house.\n",
     "* Data Types:\n",
+    "    * `3 columns` is of the `Float data type`.\n",
     "    * `34 Columns` in Dataset are of the `integer data type`.\n",
-    "    * Only `3 column` is of the `Float data type`.\n",
     "    * `43 Columns` in Dataset are of the `character data type`.\n",
     "* Missing Values: There appear to be 19 columns with missing values in the dataset.\n",
     "* Found no Duplicate Row in the Dataset."
@@ -2232,7 +2218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec6839ee",
+   "id": "56807269",
    "metadata": {},
    "source": [
     "<a id=\"cat_statistics\"></a>\n",
@@ -2242,7 +2228,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "872fe798",
+   "id": "1f8befba",
    "metadata": {},
    "outputs": [
     {
@@ -2637,7 +2623,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8aef9760",
+   "id": "ce1e0090",
    "metadata": {},
    "source": [
     "<span style=\"font-family:cursive; font-size:36px;box-shadow: black  0px 3px 15px; padding:8px 16px; border-radius:10px; border: 2px solid black; font-weight:bold; text-shadow: 2px 2px 5px rgba(4, 2, 0, 0.5); color:;\"> 4 | <span style=\"color:black ; font-style: italic;\">Data Preprocessing</span> "
@@ -2645,7 +2631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6570dcc5",
+   "id": "4643d475",
    "metadata": {},
    "source": [
     "<a id=\"num_statistics\"></a>\n",
@@ -2655,7 +2641,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "a27f4c94",
+   "id": "263a46e2",
    "metadata": {},
    "outputs": [
     {
@@ -2693,7 +2679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6cac771",
+   "id": "1fdae7d3",
    "metadata": {},
    "outputs": [],
    "source": []
