--- a/House Price Prediction.ipynb
+++ b/House Price Prediction.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dfa27ad",
+   "id": "90be4ad6",
    "metadata": {},
    "source": [
     "<span style=\"font-family:cursive; font-size:36px;box-shadow: black  0px 3px 15px; padding:8px 16px; border-radius:10px; border: 2px solid black; font-weight:bold; text-shadow: 2px 2px 5px rgba(4, 2, 0, 0.5); color:;\"> 2 | <span style=\"color:black ; font-style: italic;\">Read Dataset</span> "
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0925c75b",
+   "id": "bb2a96d5",
    "metadata": {},
    "source": [
     "<span style=\"font-family:cursive; font-size:36px;box-shadow: black  0px 3px 15px; padding:8px 16px; border-radius:10px; border: 2px solid black; font-weight:bold; text-shadow: 2px 2px 5px rgba(4, 2, 0, 0.5); color:;\"> 3 | <span style=\"color:black ; font-style: italic;\">Dataset Overview</span> "
@@ -2113,7 +2113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "id": "7d5ff50c",
    "metadata": {},
    "outputs": [
@@ -2123,13 +2123,13 @@
      "text": [
       "Number of outliers for each feature:\n",
       " MSSubClass       103\n",
-      "LotFrontage       88\n",
+      "LotFrontage       93\n",
       "LotArea           69\n",
       "OverallQual        2\n",
       "OverallCond      125\n",
       "YearBuilt          7\n",
       "YearRemodAdd       0\n",
-      "MasVnrArea        96\n",
+      "MasVnrArea       100\n",
       "BsmtFinSF1         7\n",
       "BsmtFinSF2       167\n",
       "BsmtUnfSF         29\n",
@@ -2155,24 +2155,28 @@
       "3SsnPorch         24\n",
       "ScreenPorch      116\n",
       "PoolArea           7\n",
-      "MiscVal           52\n",
+      "MiscVal           54\n",
       "MoSold             0\n",
       "YrSold             0\n",
       "SalePrice         61\n",
+      "Fence_Flag       281\n",
       "dtype: int64\n",
-      "Sum of outliers for each feature in DataFrame: 1657\n"
+      "Sum of outliers for each feature in DataFrame: 1949\n"
      ]
     }
    ],
    "source": [
-    "continuous_features = df.select_dtypes(include = 'number').columns\n",
-    "Q1 = df[continuous_features].quantile(0.25)\n",
-    "Q3 = df[continuous_features].quantile(0.75)\n",
-    "IQR = Q3 - Q1\n",
-    "outliers_count_specified = ((df[continuous_features] < (Q1 - 1.5 * IQR)) | (df[continuous_features] > (Q3 + 1.5 * IQR))).sum()\n",
+    "def Outlier(df):\n",
+    "    continuous_features = df.select_dtypes(include = 'number').columns\n",
+    "    Q1 = df[continuous_features].quantile(0.25)\n",
+    "    Q3 = df[continuous_features].quantile(0.75)\n",
+    "    IQR = Q3 - Q1\n",
+    "    outliers_count_specified = ((df[continuous_features] < (Q1 - 1.5 * IQR)) | (df[continuous_features] > (Q3 + 1.5 * IQR))).sum()\n",
     "\n",
-    "print(\"Number of outliers for each feature:\\n\",outliers_count_specified)\n",
-    "print(\"Sum of outliers for each feature in DataFrame:\", outliers_count_specified.sum())"
+    "    print(\"Number of outliers for each feature:\\n\",outliers_count_specified)\n",
+    "    print(\"Sum of outliers for each feature in DataFrame:\", outliers_count_specified.sum())\n",
+    "\n",
+    "Outlier(df)"
    ]
   },
   {
@@ -2194,7 +2198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6247d0b1",
+   "id": "a28826ea",
    "metadata": {},
    "source": [
     "<a id=\"cat_statistics\"></a>\n",
@@ -2204,7 +2208,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9b725db6",
+   "id": "81ea299f",
    "metadata": {},
    "outputs": [
     {
@@ -2599,7 +2603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4151b2ca",
+   "id": "7dff778b",
    "metadata": {},
    "source": [
     "<span style=\"font-family:cursive; font-size:36px;box-shadow: black  0px 3px 15px; padding:8px 16px; border-radius:10px; border: 2px solid black; font-weight:bold; text-shadow: 2px 2px 5px rgba(4, 2, 0, 0.5); color:;\"> 4 | <span style=\"color:black ; font-style: italic;\">Data Preprocessing</span> "
@@ -2607,7 +2611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc187959",
+   "id": "16459a17",
    "metadata": {},
    "source": [
     "<a id=\"num_statistics\"></a>\n",
@@ -2617,7 +2621,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8749f210",
+   "id": "1ef9418f",
    "metadata": {},
    "outputs": [
     {
@@ -2654,7 +2658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "132c12e3",
+   "id": "363c5a31",
    "metadata": {},
    "source": [
     "## Treating Column MiscFeature"
@@ -2662,8 +2666,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "8578107d",
+   "execution_count": 13,
+   "id": "0cdadfcc",
    "metadata": {},
    "outputs": [
     {
@@ -2678,7 +2682,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2689,8 +2693,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "9856ae51",
+   "execution_count": 14,
+   "id": "8492f437",
    "metadata": {},
    "outputs": [
     {
@@ -2704,7 +2708,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2715,8 +2719,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "9368c4b7",
+   "execution_count": 15,
+   "id": "890345bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2736,7 +2740,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e914b672",
+   "id": "46965460",
    "metadata": {},
    "source": [
     "## Treating Column Fence "
@@ -2744,8 +2748,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "6134abaa",
+   "execution_count": 16,
+   "id": "f5dacc57",
    "metadata": {},
    "outputs": [
     {
@@ -2759,7 +2763,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2770,8 +2774,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "a68ae439",
+   "execution_count": 17,
+   "id": "1fbf2431",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2780,7 +2784,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a3d5974",
+   "id": "07cb752d",
    "metadata": {},
    "source": [
     "### Adding New Feature Fence Flag using Fence Feature and drooping Fence Feature."
@@ -2788,8 +2792,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "0095e0e9",
+   "execution_count": 18,
+   "id": "fc916543",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2799,7 +2803,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a969299",
+   "id": "1197eeae",
    "metadata": {},
    "source": [
     "## Treating Column FireplaceQu "
@@ -2807,8 +2811,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "cb397246",
+   "execution_count": 19,
+   "id": "56f3f4b6",
    "metadata": {},
    "outputs": [
     {
@@ -2839,8 +2843,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "f5dc25bf",
+   "execution_count": 20,
+   "id": "e14a644b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2849,7 +2853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c1f4630",
+   "id": "f92bb9f9",
    "metadata": {},
    "source": [
     "## Treating Columns related basement"
@@ -2857,8 +2861,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "b014be85",
+   "execution_count": 21,
+   "id": "09372fe0",
    "metadata": {},
    "outputs": [
     {
@@ -3422,7 +3426,7 @@
        "1412           0          0            0  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3435,8 +3439,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "edff6ef2",
+   "execution_count": 22,
+   "id": "e87546df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3450,38 +3454,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "22218a5d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of null values in columns LotFrontage 259\n",
-      "Number of null values in columns Alley 1369\n",
-      "Number of null values in columns MasVnrType 872\n",
-      "Number of null values in columns MasVnrArea 8\n",
-      "Number of null values in columns Electrical 1\n",
-      "Number of null values in columns GarageType 81\n",
-      "Number of null values in columns GarageYrBlt 81\n",
-      "Number of null values in columns GarageFinish 81\n",
-      "Number of null values in columns GarageQual 81\n",
-      "Number of null values in columns GarageCond 81\n",
-      "Number of null values in columns PoolQC 1453\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in df.columns:\n",
-    "    if df[i].isna().sum()>0:\n",
-    "        print(f'Number of null values in columns {i}' ,df[i].isna().sum())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "73a919c5",
+   "execution_count": 24,
+   "id": "46d8db0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3495,18 +3469,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "891a6d4f",
+   "execution_count": 25,
+   "id": "3c8dc165",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "    BsmtQual BsmtCond BsmtExposure BsmtFinType1  BsmtFinSF1 BsmtFinType2   \n",
+      "332       Gd       TA           No          GLQ        1124          NaN  \\\n",
+      "\n",
+      "     BsmtFinSF2  BsmtUnfSF  TotalBsmtSF  \n",
+      "332         479       1603         3206  \n"
+     ]
+    }
+   ],
    "source": [
     "null_basement(df,'BsmtFinType2')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "406ce279",
+   "execution_count": 26,
+   "id": "e15018ce",
    "metadata": {},
    "outputs": [
     {
@@ -3561,7 +3548,7 @@
        "      <td>No</td>\n",
        "      <td>GLQ</td>\n",
        "      <td>1124</td>\n",
-       "      <td>Rec</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>479</td>\n",
        "      <td>1603</td>\n",
        "      <td>3206</td>\n",
@@ -3621,7 +3608,7 @@
       "text/plain": [
        "     BsmtQual BsmtCond BsmtExposure BsmtFinType1  BsmtFinSF1 BsmtFinType2   \n",
        "330        TA       TA           No          GLQ          40          Rec  \\\n",
-       "332        Gd       TA           No          GLQ        1124          Rec   \n",
+       "332        Gd       TA           No          GLQ        1124          NaN   \n",
        "759        Gd       TA           Av          LwQ          56          ALQ   \n",
        "888        TA       Gd           Gd          ALQ         351          Rec   \n",
        "1205       Gd       TA           Mn          ALQ         485          BLQ   \n",
@@ -3636,7 +3623,7 @@
        "1346          68       1203         1568  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3649,8 +3636,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "2ec21b14",
+   "execution_count": 27,
+   "id": "eaadf1d8",
    "metadata": {},
    "outputs": [
     {
@@ -3690,7 +3677,7 @@
        "      <th>948</th>\n",
        "      <td>Gd</td>\n",
        "      <td>TA</td>\n",
-       "      <td>No</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>Unf</td>\n",
        "      <td>0</td>\n",
        "      <td>Unf</td>\n",
@@ -3716,7 +3703,7 @@
       ],
       "text/plain": [
        "     BsmtQual BsmtCond BsmtExposure BsmtFinType1  BsmtFinSF1 BsmtFinType2   \n",
-       "948        Gd       TA           No          Unf           0          Unf  \\\n",
+       "948        Gd       TA          NaN          Unf           0          Unf  \\\n",
        "1433       Gd       TA           No          Unf           0          Unf   \n",
        "\n",
        "      BsmtFinSF2  BsmtUnfSF  TotalBsmtSF  \n",
@@ -3724,7 +3711,7 @@
        "1433           0        936          936  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3737,8 +3724,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "b3ba3d28",
+   "execution_count": 28,
+   "id": "9d6f8098",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3748,7 +3735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fdccd3e",
+   "id": "15c6ce63",
    "metadata": {},
    "source": [
     "## Treating Columns related Masonry veneer"
@@ -3756,23 +3743,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "afde2d89",
+   "execution_count": 34,
+   "id": "72c50bc0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "MasVnrArea\n",
-       "0.0      859\n",
-       "1.0        2\n",
-       "288.0      1\n",
-       "344.0      1\n",
-       "312.0      1\n",
+       "0.0    872\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3783,8 +3766,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "e404bb22",
+   "execution_count": 30,
+   "id": "9f3c8726",
    "metadata": {},
    "outputs": [
     {
@@ -3793,7 +3776,7 @@
        "Series([], Name: count, dtype: int64)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3804,8 +3787,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "740e957b",
+   "execution_count": 31,
+   "id": "342f79d3",
    "metadata": {},
    "outputs": [
     {
@@ -3818,7 +3801,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3829,19 +3812,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b5792dca",
+   "execution_count": 40,
+   "id": "a0713a2c",
    "metadata": {},
    "outputs": [],
    "source": [
     "No_Masonry_veneer = df[df['MasVnrType'].isna()==True]\n",
-    "df['MasVnrType'].loc[list((No_Masonry_veneer).index)] = 'None'\n"
+    "df['MasVnrType'].loc[list((No_Masonry_veneer).index)] = 'None'\n",
+    "df['MasVnrArea'].loc[list((No_Masonry_veneer).index)] = 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31185b71",
+   "metadata": {},
+   "source": [
+    "* **Electrical and KitchenQual:** Mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "bae70732",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Electrical']=df['Electrical'].fillna(df['Electrical'].mode()[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "157c53c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Alley'] = df.Alley.fillna('No alley access',axis=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "044d7f4d",
+   "metadata": {},
+   "source": [
+    "* **LotFrontage:** Let's simply impute missing values with the median of its neighbourhood"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "10924ad9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"LotFrontage\"] = df.groupby(\"Neighborhood\")[\"LotFrontage\"].transform(lambda x: x.fillna(x.median()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "eb5c38cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop('PoolQC', axis=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29e4f37d",
+   "id": "23d248c2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3849,7 +3889,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b742bf5f",
+   "id": "4cca0ae6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6565cde",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7260fff5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77296a77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3865,7 +3929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0668418c",
+   "id": "88a132c0",
    "metadata": {},
    "outputs": [],
    "source": []
